<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/getStartMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/getstart_gradient">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/getStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="269dp"
            android:layout_height="172dp"
            android:gravity="center"
            android:text="@string/getStart_Description"
            android:textColor="@color/accent_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="224dp"
            android:layout_height="352dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/uniflipper3_removebg_preview" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="295dp"
            android:layout_height="79dp"
            android:layout_marginTop="50dp"
            android:text="@string/getStart_Topic"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <Button
            android:id="@+id/getStartBtn"
            android:layout_width="220dp"
            android:layout_height="84dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#2431A5"
            android:text="@string/getStart_Btn"
            android:textColor="#FFFFFF"
            android:textColorLink="@color/btncolor"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>