<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:backgroundTint="@color/black">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="413dp"
                android:layout_height="224dp"
                android:layout_marginStart="1dp"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="412dp"
                    android:layout_height="226dp"
                    android:background="@drawable/login_page_gradient">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/profile_topic"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="356dp"
                        android:layout_height="130dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/squre_shape"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/userPosition"
                        android:textColor="@color/accent_color"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView19"
                        app:layout_constraintHorizontal_bias="0.515"
                        app:layout_constraintStart_toStartOf="@+id/textView19"
                        app:layout_constraintTop_toBottomOf="@+id/textView19" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:drawableStart="@drawable/ic_location_24"
                        android:text="@string/userLocation"
                        android:textColor="@color/accent_color"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView20"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/textView20"
                        app:layout_constraintTop_toBottomOf="@+id/textView20" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/userName"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/imageView6"
                        app:layout_constraintHorizontal_bias="0.481"
                        app:layout_constraintStart_toStartOf="@+id/textView18"
                        app:layout_constraintTop_toTopOf="@+id/textView18" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="144dp"
                        android:layout_height="105dp"
                        android:layout_marginTop="12dp"
                        app:layout_constraintEnd_toEndOf="@+id/textView18"
                        app:layout_constraintHorizontal_bias="0.944"
                        app:layout_constraintStart_toStartOf="@+id/textView18"
                        app:layout_constraintTop_toTopOf="@+id/textView18"
                        app:srcCompat="@drawable/ic_baseline_account_24" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="688dp"
                android:background="@color/black"
                android:backgroundTint="@color/black">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="352dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/user_input"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="Enter Email Address"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:paddingStart="12dp"
                    android:shadowColor="@color/primary_color"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/accent_color"
                    app:layout_constraintStart_toStartOf="@+id/tvEmail"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="352dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/user_input"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="Enter Your Name"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:paddingStart="12dp"
                    android:shadowColor="@color/primary_color"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/accent_color"
                    app:layout_constraintStart_toStartOf="@+id/tvName"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/profile_Year"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/etEmail"
                    app:layout_constraintTop_toBottomOf="@+id/etEmail" />

                <EditText
                    android:id="@+id/etYear"
                    android:layout_width="355dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="324dp"
                    android:background="@drawable/user_input"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="Enter Current Year"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:paddingStart="12dp"
                    android:textColorHint="@color/accent_color"
                    app:layout_constraintStart_toStartOf="@+id/tvYear"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/profile_UserEmail"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/etName"
                    app:layout_constraintTop_toBottomOf="@+id/etName" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="132dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/Profile_UserName"
                    android:textColor="#FDF6F6"
                    android:textColorLink="#EAEAEA"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etDegree"
                    android:layout_width="352dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/user_input"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="Enter Your Degree Program"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:paddingStart="12dp"
                    android:shadowColor="@color/primary_color"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/accent_color"
                    app:layout_constraintStart_toStartOf="@+id/tvDegree"
                    app:layout_constraintTop_toBottomOf="@+id/tvDegree" />

                <TextView
                    android:id="@+id/tvDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/profile_Degree"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/etYear"
                    app:layout_constraintTop_toBottomOf="@+id/etYear" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:backgroundTint="@color/btncolor"
                    android:text="@string/submitBtn"
                    app:layout_constraintEnd_toEndOf="@+id/etDegree"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="@+id/etDegree"
                    app:layout_constraintTop_toBottomOf="@+id/etDegree" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>